# osm2gpd

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: branch.yml  commitizen.yml  lint.yml  mypy.yml  publish.yml  test-publish.yml  test.yml
osm2gpd/: __init__.py  context.py  filter.py  nodes.py  parse.py  relations.py  tags.py  ways.py
osm2gpd/proto/: fileformat_pb2.py  osmformat_pb2.py
osm2gpd/unpacked/: __init__.py  base.py  nodes.py  relations.py  ways.py
osm4gpd/: parse.py
proto/: fileformat.proto  osmformat.proto
tests/: conftest.py  test_consolidate.py  test_filtering.py  test_parser.py  test_references.py  test_unpacked.py
tests/data/: andorra-latest.osm.pbf  extract.osm.pbf
