[tool.poetry]
name = "osm2gpd"
version = "0.1.0"
description = "A parser that loads openstreetmaps native protobuf format into a sparse geopandas dataframe."
authors = ["Christian <christian.knauth@citywalx.net>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
geopandas = "^0.13.2"
shapely = "^2.0.1"
protobuf = "^4.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
