[tool.poetry]
name = "osm2gpd"
version = "0.1.0"
description = "A parser that loads openstreetmaps native protobuf format into a sparse geopandas dataframe."
authors = ["Christian <christian.knauth@citywalx.net>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
geopandas = "^0.13.2"
shapely = "^2.0.1"
protobuf = "^4.23.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-datadir = "^1.4.1"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
mypy-protobuf = "^3.4.0"
mypy = "^1.4.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
